--- a/index.html
+++ b/index.html
@@ -135,6 +135,10 @@
         </p>
 
     </section>
+
+    <footer>
+        <p>Site desenvolvido por <a href="https://github.com/brunotxrs" target="_blank">Bruno Teixeira</a>, criado durante o curso HTML e CSS no <a href="https://www.cursoemvideo.com/" target="_blank">Curso em Video</a></p>
+    </footer>
     
 </body>
 </html>
